Add value to select

--- a/main.css
+++ b/main.css
@@ -18,11 +18,11 @@ html {
   font-size: 7rem;
   padding: 10rem;
 }
-.title_sub {
+.title-sub {
   font-size: 5rem;
   padding: 10rem;
 }
-.legend_text {
+.legend-text {
   font-size: 5rem;
   padding: 5rem;
 }
