--- a/css/main.css
+++ b/css/main.css
@@ -1,67 +1,154 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
+
 html {
   font-size: 62.5%;
-  font-family: sans-serif;
-  background-image: linear-gradient(to right, slateblue, coral);
 }
-.main {
-  height: 100vh;
 
-  color: black;
+body {
+  font-family: 'Raleway', sans-serif;
+  padding: 2rem;
+  box-sizing: border-box;
+}
+
+.header {
+  height: 85vh;
+  background-image: linear-gradient(to right bottom, rgba(212, 212, 148, 0.7), rgba(40, 117, 180, 0.7)),
+    url('../assets/rings-of-power.jpeg');
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 65vh, 0 100%);
+}
+
+.header__logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem;
+}
+.header__text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
-  padding: 10rem;
 }
-.title {
-  font-size: 7rem;
-  padding: 10rem;
+
+.heading-primary {
+  color: rgb(233, 231, 231);
+  line-height: 9rem;
+  text-transform: uppercase;
+  margin-bottom: 6rem;
+  display: block;
+  font-size: 6rem;
+  font-weight: 400;
+  letter-spacing: 3.5rem;
+  animation: moveInLeft 1s ease-out;
 }
-.title-sub {
-  font-size: 5rem;
-  padding: 5rem;
+.heading-primary-sub {
+  color: rgb(209, 193, 15);
 }
-.legend-text {
-  font-size: 5rem;
-  padding: 5rem;
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+
+  80% {
+    transform: translateX(1rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+.main {
+  padding: 3rem 3rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.main__text {
+  font-size: 2.8rem;
+  letter-spacing: 0.3rem;
+  border-bottom: 2px solid rgb(255, 208, 0);
+}
+.form {
+  margin-top: 3rem;
+  height: 10rem;
+  background-color: rgba(142, 158, 153, 0.588);
+  border-radius: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 3rem;
+}
+.legend__text {
+  font-size: 1.8rem;
+  color: rgb(203, 99, 68);
+  font-weight: bolder;
+  letter-spacing: 0.2rem;
 }
 .select {
-  font-size: 2rem;
+  padding: 1rem;
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+  font-family: 'Raleway', sans-serif;
+  color: rgb(204, 200, 137);
+  background-color: rgba(73, 70, 70, 0.801);
+  border-radius: 0.5rem;
 }
 .btn {
-  margin-left: 3rem;
-  width: 12rem;
+  margin-left: 2rem;
+  font-family: 'Raleway', sans-serif;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: bolder;
+  letter-spacing: 0.14rem;
+  width: 7rem;
   height: 7rem;
-  border: none;
-  border-radius: 0.8rem;
+  border-radius: 50%;
   cursor: pointer;
-  color: white;
-  font-size: 3rem;
-  background-color: rgb(117, 58, 58);
+  border: none;
+  border: 4px solid rgb(209, 193, 15);
+  padding: 10px 12px;
+  background-color: rgb(236, 233, 233);
+  color: rgb(71, 71, 71);
+  transition: 0.4s;
 }
-.restart {
-  width: 30rem;
+.btn.restart {
+  margin-left: 3rem;
 }
-.start-battle-text,
-.points,
-p {
-  margin-top: 8rem;
-  font-size: 4rem;
+.btn:hover {
+  background-color: rgb(203, 99, 68);
+  color: rgb(71, 71, 71);
+  border-color: rgb(86, 82, 82);
 }
-.points {
-  color: rgb(61, 58, 58);
+.line {
+  margin-left: 5rem;
+  width: 0.2rem;
+  height: 90%;
+  background-color: rgb(144, 143, 143);
 }
-
-.hidden {
-  display: none;
+.start-battle-text {
+  font-size: 2.4rem;
+  color: brown;
 }
-
+.battle__info {
+  font-size: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
 .players {
   display: flex;
-  gap: 50rem;
-  justify-content: center;
-  margin-top: 3rem;
-  padding-bottom: 4rem;
+  justify-content: space-around;
+  font-size: 2rem;
 }
