--- a/css/main.css
+++ b/css/main.css
@@ -10,19 +10,18 @@ html {
 
 body {
   font-family: 'Raleway', sans-serif;
-  padding: 2rem;
   box-sizing: border-box;
   background-color: rgb(241, 246, 245);
 }
 
 .header {
-  height: 65vh;
+  height: 60vh;
   background-image: linear-gradient(to right bottom, rgba(212, 212, 148, 0.7), rgba(40, 117, 180, 0.7)),
     url('../assets/rings-of-power.jpeg');
   background-size: cover;
   background-position: top;
   position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 45vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 40vh, 0 100%);
 }
 
 .header__logo-box {
@@ -81,26 +80,25 @@ body {
   border-bottom: 2px solid rgb(255, 208, 0);
 }
 .form {
-  margin-top: 3rem;
-  height: 10rem;
-  width: 50%;
+  margin: 1.5rem;
+  padding: 0.5rem;
+  width: 80%;
   background-color: rgba(142, 158, 153, 0.588);
   border-radius: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
-  margin-bottom: 3rem;
+  gap: 1rem;
 }
 .legend__text {
-  font-size: 4rem;
+  font-size: 3rem;
   color: rgb(203, 99, 68);
   font-weight: bolder;
   letter-spacing: 0.2rem;
 }
 .select {
   padding: 1rem;
-  font-size: 2rem;
+  font-size: 1.8rem;
   letter-spacing: 0.2rem;
   font-family: 'Raleway', sans-serif;
   color: rgb(204, 200, 137);
@@ -133,32 +131,33 @@ body {
   color: rgb(71, 71, 71);
   border-color: rgb(86, 82, 82);
 }
-.line {
-  margin-left: 5rem;
-  width: 0.2rem;
-  height: 90%;
-  background-color: rgb(144, 143, 143);
-}
-.start-battle-text {
-  font-size: 3rem;
-  color: brown;
-}
+
 .battle__info {
-  font-size: 3rem;
+  font-size: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
+.start-battle-text {
+  font-size: 2.5rem;
+  letter-spacing: 0.4rem;
+  text-transform: uppercase;
+  color: rgb(11, 71, 80);
+}
+.points {
+  text-transform: uppercase;
+}
+
 .players {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-size: 4rem;
-  gap: 30rem;
+  font-size: 3rem;
+  gap: 20rem;
 }
 .player {
   background-color: rgb(218, 142, 142);
   border-radius: 5rem;
   width: 40rem;
-  height: 5rem;
+  padding: 0.5rem;
 }
